--- a/Hoppy time/Base.lproj/Main.storyboard
+++ b/Hoppy time/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9aP-HV-EIz">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="kCm-tn-UGl">
+            <objects>
+                <tabBarController id="9aP-HV-EIz" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4I2-ne-IoB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="YnI-Bp-SqK" kind="relationship" relationship="viewControllers" id="vwP-IV-tqX"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="vw2-je-GuG"/>
+                        <segue destination="671-dd-r6k" kind="relationship" relationship="viewControllers" id="5lU-P5-nJg"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h09-lY-et2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1404" y="78"/>
+        </scene>
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -19,7 +39,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="juF-3x-d4C">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -32,12 +52,51 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="beer_icon" id="5Ui-bi-bmE"/>
                     <connections>
                         <outlet property="tableView" destination="juF-3x-d4C" id="XsJ-5s-oeJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-618" y="-596"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eAM-l2-m8k">
+            <objects>
+                <viewController id="671-dd-r6k" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wxo-nM-gVt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="F9Q-RU-GyS"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="profile_icon" id="QoU-5s-akH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QTn-Oz-pNC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1404" y="970"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ysp-Jl-3FW">
+            <objects>
+                <viewController id="YnI-Bp-SqK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ohE-jo-V5w">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RJr-br-Dwy"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="news_icon" id="a6A-9H-ReD"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ojz-vN-qdt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-618" y="411"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="beer_icon" width="32" height="32"/>
+        <image name="news_icon" width="32" height="32"/>
+        <image name="profile_icon" width="32" height="32"/>
+    </resources>
 </document>
